--- a/README
+++ b/README
@@ -8,10 +8,8 @@ Será utilizado no futuro, juntamente com o [formulário de cadastro](https://gu
 
 # FUNCIONALIDADE⚙️
 
-A funcionalidade do meu site vai ser uma tela de inicio para o outro trabalho que nos fez durantes as aulas de Fundamentos de Desenvolvimento Web, nesse site tem E-MAIL s SENHA  
-![tela_dei_inicio](form.jpeg)
+A funcionalidade do meu site vai ser uma tela de inicio para o outro trabalho que nos fez durantes as aulas de Fundamentos de Desenvolvimento Web, nesse site tem E-MAIL  SENHA  
 
-Acima esta o site que eu cite! 
 
 # TECNOLOGIA UTILIZADAS ⚙️
 
